--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -17,6 +17,8 @@ dependencies:
   cached_network_image: ^3.3.1
   lottie: ^3.0.0
   shared_preferences: ^2.2.2
+  sqflite: ^2.3.1
+  path: ^1.8.3
 
 dev_dependencies:
   flutter_test:
